; ModuleID = '/home/carl/AnghaBench/libgit2/tests/blame/extr_buffer.c_test_blame_buffer__delete_crosses_hunk_boundary.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/blame/extr_buffer.c_test_blame_buffer__delete_crosses_hunk_boundary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [489 x i8] c"EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE\0AEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE\0AEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE\0AEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE\0A\0ABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB\0ACCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC\0A\0A\00", align 1
@g_bufferblame = common dso_local global i32 0, align 4
@g_fileblame = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"63d671eb\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"b.txt\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"aa06ecca\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_blame_buffer__delete_crosses_hunk_boundary() #0 {
  %1 = alloca i8*, align 8
  store i8* getelementptr inbounds ([489 x i8], [489 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %2 = load i32, i32* @g_fileblame, align 4
  %3 = load i8*, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = call i32 @strlen(i8* %4)
  %6 = call i32 @git_blame_buffer(i32* @g_bufferblame, i32 %2, i8* %3, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = load i32, i32* @g_bufferblame, align 4
  %10 = call i32 @check_blame_hunk_index(i32 %8, i32 %9, i32 2, i32 6, i32 1, i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32, i32* @g_bufferblame, align 4
  %13 = call i32 @check_blame_hunk_index(i32 %11, i32 %12, i32 3, i32 7, i32 2, i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_blame_buffer(i32*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @check_blame_hunk_index(i32, i32, i32, i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
